--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=${APP_URL}/auth/google/callback
+
+
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
