--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "vue-tippy": "^6.5.0"
     }
 }
