--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.460.0",
+        "radix-vue": "^1.9.9",
+        "tailwind-merge": "^2.5.4",
+        "tailwindcss-animate": "^1.0.7",
         "vue-tippy": "^6.5.0"
     }
 }
