--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@vee-validate/zod": "^4.14.7",
         "@vueuse/core": "^11.2.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -29,9 +28,7 @@
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "vaul-vue": "^0.2.0",
-        "vee-validate": "^4.14.7",
         "vue-sonner": "^1.2.5",
-        "vue-tippy": "^6.5.0",
-        "zod": "^3.23.8"
+        "vue-tippy": "^6.5.0"
     }
 }
