--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "vaul-vue": "^0.2.0",
+        "vee-validate": "^4.14.7",
         "vue-sonner": "^1.2.5",
         "vue-tippy": "^6.5.0"
     }
