--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@vueuse/core": "^11.2.0",
+        "chart.js": "^4.4.6",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "embla-carousel-vue": "^8.3.1",
@@ -29,6 +30,7 @@
         "tailwindcss-animate": "^1.0.7",
         "vaul-vue": "^0.2.0",
         "vee-validate": "^4.14.7",
+        "vue-chartjs": "^5.3.2",
         "vue-sonner": "^1.2.5",
         "vue-tippy": "^6.5.0"
     }
